just changed paths to relative